<resources>
    <string name="app_name">SkinPals</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_kubuku">KuBuKu</string>
    <string name="title_profile">Profil</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_scanku">Scan</string>
    <string name="title_kulitku">KulitKu</string>
    <string name="scan_kulitmu_dengan_kulitku">Scan Kulitmu Dengan Kulitku</string>
    <string name="pilih_dan_gunakan_skincare">Pilih dan Gunakan Skincare</string>
    <string name="baca_artikel_amp_tulis_pengalamanmu"><![CDATA[Baca Artikel & Tulis Pengalamanmu]]></string>
    <string name="pantau_perkembangan_kulitmu">Pantau Perkembangan Kulitmu</string>
    <string name="email"><u>Email</u></string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa password?</string>
    <string name="do_not_have_account">Belum punya akun?</string>
    <string name="sign_up_here">Daftar Disini</string>
    <string name="signIn">Sign In</string>
    <string name="asterisk">*</string>
    <string name="enter">Masuk</string>
    <string name="enter_email">Masukkan email</string>
    <string name="enter_password">Masukkan password</string>
    <string name="dokter_kamu_akan_segera_hadir">Dokter Kamu akan segera hadir</string>
    <string name="nilai_kulitmu">Nilai Kulitmu :</string>
    <string name="sign_up">Sign Up</string>
    <string name="desc_home">Mulai gunakan SkinPals agar kami dapat memberikan solusi khusus untuk kulitmu!</string>
    <string name="halo">Halo!</string>
    <string name="informasi_tentang_kamu">Informasi Tentang Kamu</string>
    <string name="informasi_tentang_kulitmu">Informasi Tentang Kulitmu</string>
    <string name="nama">Nama</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="register">Register</string>
    <string name="step_01">Step 01</string>
    <string name="step_02">Step 02</string>
    <string name="daftar">Daftar</string>
    <string name="keluhan">Keluhan</string>
    <string name="please_wait">Mohon tunggu</string>
    <string name="background">Background</string>
    <string name="go_premium">Go Premium</string>
    <string name="image_profile">Image Profile</string>
    <string name="name_exp">Aras</string>
    <string name="name">Nama</string>
    <string name="skin_type">Jenis Kulit</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="profile">Profile</string>
    <string name="add_image">Add Image</string>
    <string name="date_exp">10/10/2000</string>
    <string name="email_exp">azel@gmail.com</string>
    <string name="reset_password">Reset Password</string>
    <string name="kulitmu">Kulitmu</string>
    <string name="scan_result">Hasil Pindai</string>
    <string name="logo">Logo</string>
    <string name="tagline">Lebih dari sahabat kulit</string>
    <string name="greeting">Halo,</string>
    <string name="date_home">25 Agustus 2022</string>
    <string name="desc_survey_dashboard">Bagaimana\nkondisi\nkulitmu\nhari ini?</string>
    <string name="daily_survey">Survey Harian</string>
    <string name="your_skin_condition_today">Kondisi kulitmu hari ini</string>
    <string name="value_skin_today">Yeay,\nKulit Kamu\nSehat!</string>
    <string name="kubaca">KuBaca</string>
    <string name="desc_kubaca">Artikel yang perlu kamu tahu</string>
    <string name="title_kubaca_exp">Tips untuk Kulit Kering</string>
    <string name="date_kubaca">Selasa, 16 Agustus 2022</string>
    <string name="kulitku">KulitKu</string>
    <string name="bisul">Bisul</string>
    <string name="on_development_one">Bestie Kulitmu akan segera hadir</string>
    <string name="on_development_two">Dokter kamu akan segera hadir</string>
    <string name="desc_diagnosa">Kulit kamu terdiagnosa</string>
    <string name="nama_label_scan">nama_label_scan</string>
    <string name="skinpals">SkinPals</string>
    <string name="desc_kulitku">Lebih dari sahabat kulit</string>
    <string name="desc_splash_one">Kenali Kulitmu dengan</string>
    <string name="scan_face">Scan Wajah</string>
    <string name="desc_splash_two">Pilih dan Gunakan</string>
    <string name="skincare">Skincare</string>
    <string name="desc_splash_three">Baca Artikel dan</string>
    <string name="write_experience">Tulis Pengalamanmu</string>
    <string name="desc_splash_four">Pantau Perkembangan</string>
    <string name="your_skin">Kulitmu</string>
    <string name="welcome">Selamat datang di</string>
    <string name="title_disease">Tinea Versicolor</string>
    <string name="desc_disease">Pengertian, Gejala, Bentuk Anatomi, Perawatan</string>
    <string name="result_title">Hasil : Jerawat</string>
    <string name="date_kulitku_exp">18 Agustus 2022, 14:59:12</string>
    <string name="exit">Keluar</string>
    <string name="options">Pengaturan</string>
    <string name="exp_name_profile">Azel</string>
    <string name="exp_email_profile">azel@gmail.com</string>
    <string name="on_development">On Development</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="history">Riwayat Pindai Kulitmu</string>
    <string name="notification">Notification</string>
    <string name="close">Tutup</string>
    <string name="desc_notification">Tidak ada Notifikasi masuk</string>
    <string name="rekomendasi_kandungan">Rekomendasi Kandungan</string>
    <string name="skin_suggestions">Saran Kulitku</string>
    <string name="text_suggest_value_exp">Memakai skincare berbahan dasar snail untuk recovery</string>
    <string name="tidur_teratur">Tidur teratur</string>
    <string name="reset_npassword">Reset \nPassword</string>
    <string name="desc_reset_password">Please enter your email address to \nrequest a password reset.</string>
    <string name="email_required">Email*</string>
    <string name="kirim">Kirim</string>
    <string name="ingredients">Ingredients</string>
    <string-array name="gender">
        <item>Pria</item>
        <item>Wanita</item>
    </string-array>
</resources>