<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3E2C7"
    android:id="@+id/frame_personal_info"
    tools:context=".ui.register.PersonalInfoFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#FDF6F0"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="33dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/informasi_tentang_kamu"
                android:textColor="#293942"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edittext_name"
                style="@style/editTextShape"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="@string/nama"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_title" />

            <Spinner
                android:id="@+id/spinner_gender"
                style="@style/editTextShape"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="@string/gender"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittext_name" />

            <EditText
                android:id="@+id/edittext_birthdate"
                style="@style/editTextShape"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="24dp"
                android:drawableEnd="@drawable/date_logo"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/tanggal_lahir"
                android:inputType="date"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_gender" />

            <EditText
                android:id="@+id/edittext_email"
                style="@style/editTextShape"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittext_birthdate" />

            <EditText
                android:id="@+id/edittext_password"
                style="@style/editTextShape"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="26dp"
                android:drawableEnd="@drawable/ic_see"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittext_email" />

            <EditText
                android:id="@+id/edittext_confirm_password"
                style="@style/editTextShape"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="26dp"
                android:drawableEnd="@drawable/ic_see"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittext_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_next"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_shape_elephant"
                android:text="@string/lanjutkan"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittext_confirm_password" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>